# gazelle-foreign-cc

./: .bazelrc  .buildifier-hook.sh  .buildifier-recursive-hook.sh  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CLAUDE.md  CMAKE_FILE_API.md  GIT_HOOKS.md  MODULE.bazel  PRE_COMMIT.md  README.md  USAGE.md  bazel-bin  bazel-gazelle-foreign-cc  bazel-out  bazel-testlogs  cmake_wrapper.sh  external_repo_buildfile.BUILD  go.mod  go.sum  install-hooks.sh  librdkafka_build_issue.md  libzmq_platform.hpp  run_ci_locally.sh  test_cmake_api.sh  test_libzmq.sh
.cursor/: environment.json
.github/: copilot-instructions.md
.github/actions/setup-development/: action.yml
.github/copilot/: README.md  setup.sh
.github/workflows/: build.yml  ci.yml  claude.yml  copilot-setup-steps.yml  examples.yml  gazelle-update.yml
.openhands/: setup.sh
.openhands/microagents/: repo.md
cmd/gazelle-foreign-cc/: BUILD.bazel  main.go
common/: BUILD.bazel  config.go  generate.go  types.go
examples/: BUILD.bazel  MODULE.bazel  README.md  cmake_wrapper.sh
examples/cmake_directive/: BUILD.bazel  README.md
examples/configure_file_test/: BUILD.bazel  CMakeLists.txt  config.h.in  main.cpp
examples/libcurl/: BUILD.bazel  README.md  example_download.cpp  example_http_get.cpp
examples/libzmq/: BUILD.bazel  README.md  example_client.cpp  example_server.cpp  extensions.bzl  repositories.bzl
examples/simple_hello/: BUILD.bazel  CMakeLists.txt  README.md
examples/testdata/simple_lib/: BUILD.bazel  CMakeLists.txt  WORKSPACE
examples/testdata/simple_lib/include/: simple.h
examples/testdata/simple_lib/src/: main.cpp  simple.cpp  utils.cpp
gazelle/: BUILD.bazel  cmake_api.go  config.go  config_test.go  generate.go  generate_test.go  main.go  plugin.go  resolve.go  util.go
gazelle-foreign-cc/: MODULE.bazel  README.md  go.mod
gazelle-foreign-cc/.github/workflows/: build.yml
gazelle-foreign-cc/gazelle/: BUILD.bazel  config.go  generate.go  generate_test.go  resolve.go
gazelle-foreign-cc/language/: BUILD.bazel  cmake.go
gazelle-foreign-cc/testdata/simple_cc_project/: CMakeLists.txt  lib.h
hooks/: pre-commit
language/: BUILD.bazel  cmake.go  cmake_api.go  cmake_api_integration_test.go  cmake_api_test.go  cmake_test.go  util.go
my-gazelle-plugin/: go.mod
my-gazelle-plugin/language/: cmake.go
rules/: BUILD.bazel  cmake_configure_file.bzl  cmake_include_directories.bzl
testdata/: BUILD.bazel
testdata/complex_cc_project/: BUILD.bazel  CMakeLists.txt
testdata/complex_cc_project/.cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
testdata/complex_cc_project/.cmake-build/.cmake/api/v1/reply/: cache-v2-400a0c63f921ba1a93c7.json  codemodel-v2-72e26ba2bc1c93df00ae.json  index-2025-05-26T20-12-05-0487.json  target-core-4003e77d430c64a5fafb.json  target-main_app-a8a32224a1e0f538777d.json  target-plugin_system-b9f9891126bbccfbcab7.json  target-test_runner-801fd0ad525c36f7b263.json  target-utils-aee8df7966085c0dad1a.json
testdata/complex_cc_project/.cmake-build/plugins/: Makefile  cmake_install.cmake
testdata/complex_cc_project/plugins/: BUILD.bazel  CMakeLists.txt
testdata/complex_cc_project/src/: core.cpp  main.cpp  utils.cpp
testdata/configure_file_example/: BUILD.bazel  CMakeLists.txt  config.h.in
testdata/configure_file_example/src/: lib.cpp  main.cpp
testdata/external_cmake_project/: README.md
testdata/external_cmake_project/mockexternal/: BUILD.bazel  CMakeLists.txt
testdata/external_cmake_project/mockexternal/include/: external_lib.h
testdata/external_cmake_project/mockexternal/src/: external_lib.cpp  main.cpp
testdata/invalid_cmake_project/: BUILD.bazel  CMakeLists.txt
testdata/invalid_cmake_project/.cmake-build/: CMakeCache.txt
testdata/libzmq/: CMakeLists.txt
testdata/libzmq/src/: address.hpp  channel.cpp  channel.hpp  client.cpp  client.hpp  clock.cpp  clock.hpp
testdata/libzmq/test/: test_zmq.cpp
testdata/libzmq_project/: CMakeLists.txt
testdata/libzmq_project/include/: zmq.h  zmq_utils.h
testdata/libzmq_project/perf/: inproc_lat.cpp
testdata/libzmq_project/src/: address.cpp  context.cpp  message.cpp  poller.cpp  socket.cpp  tcp_connecter.cpp  tcp_listener.cpp  zmq.cpp
testdata/platform_hpp_project/: BUILD.bazel  CMakeLists.txt
testdata/platform_hpp_project/include/: config.h.in
testdata/platform_hpp_project/src/: main.cpp
testdata/regex_fallback_project/: BUILD.bazel  CMakeLists.txt
testdata/regex_fallback_project/.cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
testdata/regex_fallback_project/.cmake-build/.cmake/api/v1/reply/: cache-v2-2838bc9dbb540d9b73aa.json  codemodel-v2-2b37dcafada20f7ebf5e.json  index-2025-05-26T20-10-15-0641.json  target-simple_app-325d0fe21c11e72672b6.json  target-simple_lib-a45e3f28b10a3e2345d2.json
testdata/simple_cc_project/: BUILD.bazel  lib.cc  main.cc
testdata/simple_cc_project/.cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
testdata/simple_cc_project/.cmake-build/.cmake/api/v1/reply/: cache-v2-36162e18cca4a62bba2c.json  codemodel-v2-26577f65b3db7e9fa5e6.json  index-2025-05-26T20-12-05-0454.json  target-app-fba61383f3c6a55bf87c.json  target-my_lib-81668fdf5949750aef1e.json
