module(
    name = "gazelle-foreign-cc",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools")
