module(
    name = "gazelle-foreign-cc",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools")

# Download real libzmq source code for testing
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libzmq",
    build_file = "//third_party:libzmq.BUILD",
    sha256 = "02ecc88466ae38cf2c8d79f09cfd2675ba299a439680b64ade733e26a349edeb",
    strip_prefix = "libzmq-4.3.5",
    urls = [
        "https://github.com/zeromq/libzmq/archive/refs/tags/v4.3.5.tar.gz",
    ],
)


