# Examples directory BUILD file

# This file defines build targets for the examples directory
# It includes targets for running gazelle on example projects

load("@gazelle//:def.bzl", "gazelle")

# Simple wrapper for system cmake binary
sh_binary(
    name = "cmake",
    srcs = ["cmake_wrapper.sh"],
    visibility = ["//visibility:public"],
)

# Default gazelle target for examples
gazelle(
    name = "gazelle",
    data = ["@libzmq//:srcs"],
    # Use the gazelle-foreign-cc plugin from the main module
    gazelle = "@gazelle-foreign-cc//gazelle:gazelle-foreign-cc",
)
