module(
    name = "examples",
    version = "0.1.0",
)

# Reference the main gazelle-foreign-cc module using local path override
bazel_dep(name = "gazelle-foreign-cc", version = "0.1.0")
local_path_override(
    module_name = "gazelle-foreign-cc",
    path = "..",
)

# Add common dependencies for C++ projects
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "gazelle", version = "0.43.0")

# For fetching external dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Register libzmq repository using use_repo_rule
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libzmq",
    build_file = "@gazelle-foreign-cc//:external_repo_buildfile.BUILD",
    sha256 = "6653ef5910f17954861fe72332e68b03ca6e4d9c7160eb3a8de5a5a913bfab43",
    strip_prefix = "zeromq-4.3.5",
    url = "https://github.com/zeromq/libzmq/releases/download/v4.3.5/zeromq-4.3.5.tar.gz",
)

http_archive(
    name = "librdkafka",
    strip_prefix = "librdkafka-1.8.2",
    integrity = "sha256-anR9KTp6RhO9KJfijoeRR2++Guc2HyUwqHbg/Ug0gqY=",
    url = "https://github.com/edenhill/librdkafka/archive/v1.8.2.tar.gz",

    # Provide a custom BUILD file that exports all sources *and* defines a
    # cmake_configure_file rule called :config_h which generates the root-level
    # config.h required by tinycthread (../config.h include).
    build_file_content = """
package(default_visibility = ["//visibility:public"])

load("@gazelle-foreign-cc//rules:cmake_configure_file.bzl", "cmake_configure_file")

# All files for Gazelle's overlay to reference
filegroup(
    name = "srcs",
    srcs = glob(["**"], allow_empty = False),
)

# Generate the root-level config.h using CMake
cmake_configure_file(
    name = "config_h",
    out = "config.h",
    cmake_binary = "@examples//:cmake",
    cmake_source_dir = ".",  # project root
    cmake_source_files = glob(["**"], exclude = []),
    generated_file_path = "generated/config.h",
)
""",
)
