module(
    name = "gazelle-foreign-cc",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.45.1") # Updated to a more recent version as 0.54.1 does not exist
bazel_dep(name = "gazelle", version = "0.36.0") # Updated to a more recent version as 0.43.0 does not exist
bazel_dep(name = "bazel_skylib", version = "1.5.0") # Updated to a more recent version as 1.7.1 does not exist
bazel_dep(name = "rules_cc", version = "0.0.9")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
