# gazelle-foreign-cc/language/BUILD.bazel
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "language",
    srcs = [
        "cmake.go",
        "cmake_api.go",
    ],
    importpath = "github.com/goniz/gazelle-foreign-cc/language",
    visibility = ["//gazelle:__pkg__", "//cmd/gazelle-foreign-cc:__pkg__", "//:__pkg__"], # Allow plugin binary to import this
    deps = [
        "//gazelle:cmake_lib",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "language_tests",
    srcs = ["cmake_test.go"],
    embed = [":language"],
    deps = ["//gazelle:cmake_lib"],
)
