# gazelle-foreign-cc/language/BUILD.bazel
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "language",
    srcs = [
        "cmake.go",
        "cmake_api.go",
        "util.go",
    ],
    importpath = "github.com/goniz/gazelle-foreign-cc/language",
    visibility = [
        "//:__pkg__",
        "//cmd/gazelle-foreign-cc:__pkg__",
        "//gazelle:__pkg__",
    ],  # Allow plugin binary to import this
    deps = [
        "//common",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@rules_go//go/tools/bazel",
    ],
)

go_test(
    name = "language_tests",
    srcs = [
        "cmake_api_integration_test.go",
        "cmake_api_test.go",
        "cmake_test.go",
    ],
    embed = [":language"],
    deps = [
        "//common",
        "//gazelle:cmake_lib",
    ],
)
