load("@rules_go//go:def.bzl", "go_binary")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

# Test utility for CMake File API
go_binary(
    name = "cmake-test-util",
    srcs = ["main.go"],
    deps = [
        "//language",
    ],
    visibility = ["//visibility:public"],
)

# Gazelle binary with CMake language plugin
gazelle_binary(
    name = "gazelle-foreign-cc",
    languages = ["//language"],
    visibility = ["//visibility:public"],
)

# Gazelle rule for running the plugin
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-foreign-cc",
    visibility = ["//visibility:public"],
)