load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_binary")

# Test utility for CMake File API
go_binary(
    name = "cmake-test-util",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//language",
    ],
)

# Gazelle binary with CMake language plugin
gazelle_binary(
    name = "gazelle-foreign-cc",
    languages = ["//language"],
    visibility = ["//visibility:public"],
)

# Gazelle rule for running the plugin
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-foreign-cc",
    visibility = ["//visibility:public"],
)
