load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "example_http_get",
    srcs = ["example_http_get.cpp"],
    deps = [
        "//thirdparty/libcurl",
    ],
)

cc_binary(
    name = "example_download",
    srcs = ["example_download.cpp"],
    deps = [
        "//thirdparty/libcurl",
    ],
)
