# LibZMQ example BUILD file

# Example client and server applications using libzmq

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "client_example",
    srcs = ["example_client.cpp"],
    deps = ["//thirdparty/libzmq"],
)

cc_binary(
    name = "server_example",
    srcs = ["example_server.cpp"],
    deps = ["//thirdparty/libzmq"],
)
