# Simple Hello World example BUILD file

# This BUILD file demonstrates basic C++ targets that gazelle should be able to generate
# from the CMakeLists.txt file

cc_binary(
    name = "hello",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
)

# Gazelle directive to use our plugin
# gazelle:prefix github.com/examples/simple_hello