# gazelle-foreign-cc/language/BUILD.bazel
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "language",
    srcs = ["cmake.go"],
    importpath = "example.com/gazelle-foreign-cc/language",
    visibility = ["//gazelle:__pkg__"], # Allow //gazelle package to import this
    deps = [
        "//gazelle:config_lib", # Dependency on the config part of the gazelle package
        "@com_github_bazelbuild_bazel_gazelle//config",
        "@com_github_bazelbuild_bazel_gazelle//language",
        "@com_github_bazelbuild_bazel_gazelle//resolve",
        "@com_github_bazelbuild_bazel_gazelle//rule",
        "@com_github_bazelbuild_buildtools//build", # For build.Label, if still used
    ],
)
