load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "plugin_system",
    srcs = [
        "plugins/loader.cpp",
        "plugins/plugin.cpp",
    ],
    includes = [
        "include",
        "third_party/include",
    ],
)

cc_binary(
    name = "test_runner",
    srcs = [
        "tests/test_main.cpp",
        "tests/test_utils.cpp",
    ],
    includes = [
        "include",
        "tests",
        "third_party/include",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "src/helper.cpp",
        "src/utils.cpp",
    ],
    includes = [
        "include",
        "third_party/include",
    ],
)

cc_library(
    name = "core",
    srcs = [
        "src/core.cpp",
        "src/manager.cpp",
    ],
    includes = [
        "include",
        "third_party/include",
    ],
)

cc_binary(
    name = "main_app",
    srcs = ["src/main.cpp"],
    includes = [
        "include",
        "third_party/include",
    ],
)
