load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//rules:cmake_configure_file.bzl", "cmake_configure_file")

cc_binary(
    name = "app",
    srcs = ["src/main.cpp"],
    includes = [".cmake-build"],
    deps = [":mylib"],
)

cc_library(
    name = "mylib",
    srcs = ["src/lib.cpp"],
    includes = [".cmake-build"],
)

cmake_configure_file(
    name = "config_h",
    src = "config.h.in",
    out = "config.h",
    defines = {
        "CMAKE_CURRENT_SOURCE_DIR": ".",
        "ENABLE_FEATURE": "ON",
        "PROJECT_DESCRIPTION": "A",
        "PROJECT_NAME": "project",
    },
)
