load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

filegroup(
    name = "testdata_files",
    srcs = glob(["*"]),
    visibility = ["//testdata:__pkg__"],
)

cc_binary(
    name = "simple_app",
    srcs = [
        "main.cpp",
        "utils.cpp",
    ],
)

cc_library(
    name = "simple_lib",
    srcs = ["helper.cpp"],
)
