filegroup(
    name = "all",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)

# Export individual source files for consumption by gazelle-generated rules
exports_files([
    "src/main.cpp",
    "src/simple.cpp", 
    "src/utils.cpp",
    "include/simple.h",
], visibility = ["//visibility:public"])